tests/snapshots/examples_fixtures/diagnostics_demos__errors__undefined_variable.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/undefined_variable.flx
== compile ==
failed (compile)
== diagnostics ==
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/diagnostics_demos/errors/undefined_variable.flx:6:1
  |
6 | print(nonexistent_variable)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | --------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/diagnostics_demos/errors/undefined_variable.flx:6:1
  |
6 | print(nonexistent_variable)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | --------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/diagnostics_demos/errors/undefined_variable.flx:6:1
  |
6 | print(nonexistent_variable)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | --------------------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`


error[E004]: Undefined Variable

I can't find a value named `nonexistent_variable`.

  examples/diagnostics_demos/errors/undefined_variable.flx:6:7
  |
6 | print(nonexistent_variable)
  |       ^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let nonexistent_variable = ...;

Found 4 errors.
== stdout ==
<not executed>
